added laravel autodiscover provider into composer.json
Now is not needed to add  ServiceProvider class into config/app

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "jdavidbakr\\MailTracker\\MailTrackerServiceProvider"
+            ]
         }
     }
 }
