Updating PHPUnit and replacing SES test with mocks

--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,11 @@
         "php" : "~5.5|~7.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
+        "phpunit/phpunit" : "~7.0",
         "scrutinizer/ocular": "~1.1",
         "squizlabs/php_codesniffer": "~2.3",
-        "orchestra/testbench-browser-kit": "~3.0"
+        "orchestra/testbench-browser-kit": "~3.0",
+        "mockery/mockery": "^1.1"
     },
     "suggest": {
         "fedeisas/laravel-mail-css-inliner": "Automatically inlines CSS into all outgoing mail."
