--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,21 @@
     ],
     "homepage": "https://github.com/jdavidbakr/MailTracker",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "J David Baker",
-            "email": "me@jdavidbaker.com",
-            "homepage": "http://www.jdavidbaker.com",
-            "role": "Developer"
-        }
-    ],
+    "authors": [{
+        "name": "J David Baker",
+        "email": "me@jdavidbaker.com",
+        "homepage": "http://www.jdavidbaker.com",
+        "role": "Developer"
+    }],
     "require": {
-        "laravel/framework": ">=5.3.23",
+        "php": ">=7.1",
+        "laravel/framework": ">=5.5",
         "guzzlehttp/guzzle": "^5.3.1|^6.2.1",
         "aws/aws-php-sns-message-validator": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.0",
-        "orchestra/testbench-browser-kit": "~4.0",
+        "phpunit/phpunit": "~6.0|~7.0|~8.0",
+        "orchestra/testbench": "~3.0|~4.0",
         "mockery/mockery": "^1.1"
     },
     "suggest": {
