--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - LARAVEL_VERSION=5.7.*
     - LARAVEL_VERSION=5.8.* COVERAGE=true
     - LARAVEL_VERSION=6.0.* COVERAGE=true
+    - LARAVEL_VERSION=7.0.* COVERAGE=true
 
 matrix:
     # For each PHP version we exclude the coverage env, except for PHP 7.1
@@ -24,6 +25,7 @@ matrix:
           env: LARAVEL_VERSION=6.0.* COVERAGE=true
         - php: 7.2
           env: LARAVEL_VERSION=6.0.* COVERAGE=true
+          env: LARAVEL_VERSION=7.0.* COVERAGE=true
 
 before_install:
     - echo "memory_limit=2G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
