Figuring out how to exclude laravel 6 and 7 from php 7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
     exclude:
         - php: 7.1
           env: LARAVEL_VERSION=6.0.* COVERAGE=true
+        - php: 7.1
           env: LARAVEL_VERSION=7.0.* COVERAGE=true
         - php: 7.2
           env: LARAVEL_VERSION=6.0.* COVERAGE=true
