--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0|~7.0|~8.0",
-        "orchestra/testbench": "~3.0|~4.0",
+        "orchestra/testbench": "~3.0|~4.0|~5.0",
         "mockery/mockery": "^1.1"
     },
     "suggest": {
