--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     }],
     "require": {
         "php": ">=7.1",
-        "laravel/framework": ">=5.7",
+        "laravel/framework": ">=5.7 <7.0",
         "guzzlehttp/guzzle": "^5.3.1|^6.2.1",
         "aws/aws-php-sns-message-validator": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0|~7.0|~8.0",
-        "orchestra/testbench": "~3.0|~4.0|~5.0",
+        "orchestra/testbench": "~3.0|~4.0",
         "mockery/mockery": "^1.1"
     },
     "suggest": {
