Support for Laravel 7

--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,24 @@
     ],
     "homepage": "https://github.com/jdavidbakr/MailTracker",
     "license": "MIT",
-    "authors": [{
-        "name": "J David Baker",
-        "email": "me@jdavidbaker.com",
-        "homepage": "http://www.jdavidbaker.com",
-        "role": "Developer"
-    }],
+    "authors": [
+        {
+            "name": "J David Baker",
+            "email": "me@jdavidbaker.com",
+            "homepage": "http://www.jdavidbaker.com",
+            "role": "Developer"
+        }
+    ],
     "require": {
-        "php": ">=7.1",
-        "laravel/framework": ">=5.7 <7.0",
+        "php": ">=7.2.5",
+        "laravel/framework": "~7.0",
         "guzzlehttp/guzzle": "^5.3.1|^6.2.1",
-        "aws/aws-php-sns-message-validator": "^1.1"
+        "aws/aws-php-sns-message-validator": "^1.1",
+        "aws/aws-sdk-php": "^3.133"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0|~7.0|~8.0",
-        "orchestra/testbench": "~3.0|~4.0",
+        "phpunit/phpunit": "~8.0",
+        "orchestra/testbench": "~5.0",
         "mockery/mockery": "^1.1"
     },
     "suggest": {
