--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
     - 7.3
 
 env:
-    - LARAVEL_VERSION=7.0.* COVERAGE=true
+    - LARAVEL_VERSION=7.0.*
 
 before_install:
     - echo "memory_limit=2G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
@@ -24,8 +24,6 @@ install: travis_retry composer install --no-interaction --prefer-dist
 before_script: phpenv config-add ~/xdebug.ini
 
 script: vendor/bin/phpunit
-
-after_success: sh -c "if [ ! -z ${COVERAGE+x} ]; then travis_retry php vendor/bin/php-coveralls; fi"
 
 notifications:
     email: false
