--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,16 @@
     "minimum-stability": "dev",
     "homepage": "https://github.com/jdavidbakr/MailTracker",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "J David Baker",
-            "email": "me@jdavidbaker.com",
-            "homepage": "http://www.jdavidbaker.com",
-            "role": "Developer"
-        }
-    ],
+    "authors": [{
+        "name": "J David Baker",
+        "email": "me@jdavidbaker.com",
+        "homepage": "http://www.jdavidbaker.com",
+        "role": "Developer"
+    }],
     "require": {
         "php": ">=7.2.0",
         "illuminate/support": "~7.0|~8.0",
-        "guzzlehttp/guzzle": "^5.3.1|^6.2.1",
+        "guzzlehttp/guzzle": "^5.3.1|^6.2.1|^7.0",
         "aws/aws-php-sns-message-validator": "^1.1",
         "aws/aws-sdk-php": "^3.133"
     },
